<resources>
    <string name="app_name">LoginApp_4</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="new_password">New Password</string>
    <string name="createnewaccount">Create new account</string>
    <string name="user_login">User Login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create A NEW ACCOUNT</string>
</resources>